# my-users-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env-example  pyproject.toml  run.sh
.github/workflows/: docker.yaml
myusers/: __init__.py  cli.py  config.py  ext.py  version.py
myusers/modules/: __init__.py  models.py  users.py
