[tool.poetry]
name = "service-error"
version = "v0.1.0"
description = "A Flask app to present the Sentry Error Tracking"
authors = ["Felipe Carlos <efelipecarlos@gmail.com>"]
license = "MIT"

packages = [
    { include = "myusers" }
]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
Faker = "^13.7.0"
tinydb = "^4.7.0"
Flask-SQLAlchemy = "^2.5.1"
sentry-sdk = {extras = ["flask"], version = "^1.5.11"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[tool.poetry.scripts]
"myusers" = "myusers.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
